OBJ exporter does not properly export "image sequence" texture names #100669

Closed
opened 2022-08-28 11:56:00 +02:00 by Gavin Smith · 8 comments

blender.jpg

In the output directory, each of the 10 .mtl files have the same image name (i.e the first image in the sequence). Expected result is that each exported frame would have the correct filename of an "image sequence" texture type.

This is the 4th .mtl file in the sequnce, but as you can see refers to Image0001.png

newmtl final
Ns 250.000000
Ka 1.000000 1.000000 1.000000
Kd 0.800000 0.000000 0.051782
Ks 0.500000 0.500000 0.500000
Ke 0.000000 0.000000 0.000000
Ni 1.450000
d 1.000000
illum 2
map_Ke Image0001.png
![blender.jpg](https://archive.blender.org/developer/F13425414/blender.jpg) In the output directory, each of the 10 .mtl files have the same image name (i.e the first image in the sequence). Expected result is that each exported frame would have the correct filename of an "image sequence" texture type. This is the 4th .mtl file in the sequnce, but as you can see refers to Image0001.png ``` newmtl final Ns 250.000000 Ka 1.000000 1.000000 1.000000 Kd 0.800000 0.000000 0.051782 Ks 0.500000 0.500000 0.500000 Ke 0.000000 0.000000 0.000000 Ni 1.450000 d 1.000000 illum 2 map_Ke Image0001.png ```
Author

Added subscriber: @GavinfSmith

Added subscriber: @GavinfSmith

Added subscriber: @aras_p

Added subscriber: @aras_p

@GavinfSmith can you also attach a .blend file that reproduces the issue?

@GavinfSmith can you also attach a .blend file that reproduces the issue?
Author

bakebug.zip

See attached. Each image name in the .mtl files refers to the same map name instead of sequential file names.

Thanks for the quick response!

Cheers

Gavin

[bakebug.zip](https://archive.blender.org/developer/F13429552/bakebug.zip) See attached. Each image name in the .mtl files refers to the same map name instead of sequential file names. Thanks for the quick response! Cheers Gavin
Aras Pranckevicius changed title from When exporting an OBJ sequence, the material files have incorrect image texture names if an image sequence sequence has been used. to OBJ exporter does not properly export "image sequence" texture names 2022-08-29 14:04:08 +02:00
Aras Pranckevicius self-assigned this 2022-08-29 14:04:08 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/blender@6133434478

This issue was referenced by blender/blender@613343447861eae1aef90786802bac28a1adaea6

This issue was referenced by blender/blender@67dcdebb3a

This issue was referenced by blender/blender@67dcdebb3a7cc057fe73079fc038f9264326daea

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#100669
No description provided.